[gd_scene load_steps=4 format=3 uid="uid://bjufuciwxwwe4"]

[ext_resource type="Theme" uid="uid://b840j3o8qmhs5" path="res://themes/panelContainer.tres" id="1_73haw"]
[ext_resource type="Script" path="res://scripts/Dialogue.gd" id="1_j5vdr"]
[ext_resource type="Theme" uid="uid://b0vna5pvkaogc" path="res://themes/labelTheme.tres" id="3_5cutn"]

[node name="Background" type="PanelContainer"]
offset_right = 502.0
offset_bottom = 277.0
theme = ExtResource("1_73haw")
script = ExtResource("1_j5vdr")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2

[node name="CharacterName" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_5cutn")
theme_override_colors/font_color = Color(0.129412, 0.129412, 0.129412, 1)
theme_override_font_sizes/font_size = 30

[node name="Character" type="TextureRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 6

[node name="TextDialogue" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
theme = ExtResource("3_5cutn")
theme_override_colors/font_color = Color(0.129412, 0.129412, 0.129412, 1)
theme_override_font_sizes/font_size = 35

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_request_completed"]
